<resources>
    <string name="app_name">Memorize</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create</string>
    <string-array name="main_tabs">
        <item name="group">Group</item>
        <item name="word">Word</item>
    </string-array>
    <string name="title_activity_test">TestActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="new_group">New group</string>
    <string name="group_name">Name of group</string>
    <string name="word">Word</string>
    <string name="translation">Translation</string>
    <string name="transcript">Transcript</string>
    <string name="select_group">Select group</string>
    <string name="new_word">New word</string>
    <string name="without_group">Without group</string>
    <string name="adding_word">Adding word</string>
    <string name="test">Test</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="test_result">Correct answer number:%1$d</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="check">Check</string>
    <string name="answer">Answer</string>
    <string name="normal">Normal</string>
    <string name="reverse">Reverse</string>
    <string name="select_question_type">Select type</string>
    <string name="finish">Finish</string>
    <string name="language">Language</string>
    <string name="pref_language_summary">Learning language</string>
    <string name="settings">Settings</string>
    <string name="languageDefaultValue">en</string>
    <string name="game_start_error">You must add at least 3 words to the group</string>
    <string name="action_import">Import words</string>
    <string name="choose_file">Choose file</string>
    <string name="example">Example</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmation_question">Do you really want to delete this word?</string>
</resources>
