<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding"
    tools:context="me.kamadi.memorize.dialog.GroupDialog">

    <EditText
        android:id="@+id/word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/word" />

    <EditText
        android:id="@+id/translation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/translation" />

    <EditText
        android:id="@+id/transcript"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/transcript" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/select_group"
        android:spinnerMode="dialog"/>

    <Button
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/create"
        android:textColor="@color/white" />
</LinearLayout>
